# Ray-Tracer-Graphics-Hack-Night

./: CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  color.hpp  image.cpp  image.hpp  main.cpp  ray.hpp
test/: CMakeLists.txt  camera_test.cpp  image_test.cpp  main.cpp  ray_test.cpp
